npm version update

--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "mousespeed.js",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Mouse speed based browser events (mouseoverslow and mousemoveslow) for a UX friendlier mouse over behavior.",
   "main": "mousespeed.js",
   "homepage": "https://bitbucket.org/dyuri/mousespeed.js",
-  "keywords": ["mouse", "speed", "mouseover"],
+  "keywords": [
+    "mouse",
+    "speed",
+    "mouseover"
+  ],
   "author": "Gyuri Horak <dyuri@horak.hu>",
   "license": "MIT"
 }
